links, picture, bio

--- a/index.qmd
+++ b/index.qmd
@@ -3,20 +3,32 @@ title: "Website Workshop (Main Page)"
 about:
   # Templates include: jolla, trestles, solana, marquee, or broadside
   # https://quarto.org/docs/websites/website-about.html
-  template: jolla
-  image: img/iggy.jpg
+  template: broadside
+  image: img/headshot.jpeg
   links:
     # Available icons: https://icons.getbootstrap.com/
     - icon: twitter
       text: twitter
-      href: https://twitter.com
+      href: https://twitter.com/reggiedoesstats
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/rlisinker
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/regina-lisinker
 ---
 
-Iggy is the Chief Beggar at Three Bark Manor. When not innovating naptime, Iggy enjoys dinner.
+### Bio
+I am a graduate student in the Statistics Education program at the University of Minnesota, Twin Cities. I am an avid Pinterest user, I love karaoke, and I stop to pet every dog I pass (after asking their owner, of course).
 
+### Education
+M.A. Statistics Education
+*September 2021 - October 2023*
+Quantitative Methods in Education
+Educational Psychology Department
+University of Minnesota, Twin Cities
+
+B.S. Statistics
+*September 2016 - June 2020*
+Minor in Gerontology
+California Polytechnic State University, San Luis Obispo
