--- a/about.qmd
+++ b/about.qmd
@@ -2,19 +2,17 @@
 title: "About"
 ---
 
-My full name is Ignatius Fauci Fortenberry, III. Mostly I go by Iggy (except when I am in trouble). I am a 2-year old schnauzer/black lab mix. I live with my sister (Sadie) and my brother (Hank). I love to eat, sleep, and walk. My favorite people are: anyone with treats, the postal delivery person, the Amazon delivery person, the UPS delivery person, and Goldy. In my spare time I enjoy pulling the stuffing out of toys and dribbling water all over the house.
+### Bio
+I am a graduate student in the Statistics Education program at the University of Minnesota, Twin Cities. I am an avid Pinterest user, I love karaoke, and I stop to pet every dog I pass (after asking their owner, of course).
 
-## Education
+### Education
+M.A. Statistics Education
+*September 2021 - October 2023*   
+Quantitative Methods in Education
+Educational Psychology Department
+University of Minnesota, Twin Cities
 
-Puppy Kindergarten Level 2, [Pet Smart](https://www.petsmart.com/) | Richfield, MN
-Certificate in Walking | Oct. 2021
-
-Puppy Kindergarten Level 1, [Pet Smart](https://www.petsmart.com/) | Richfield, MN
-Certificate in Listening | Sept. 2021
-
-
-## References
-
-Hank | Chief Barking Scientist | Three Bark Manor
-
-[Sadie](https://sadie-dog.netlify.app/) | Naptime Engineer | Three Bark Manor
+B.S. Statistics
+*September 2016 - June 2020*    
+Minor in Gerontology
+California Polytechnic State University, San Luis Obispo
