--- a/about.qmd
+++ b/about.qmd
@@ -1,24 +1,16 @@
 ---
-title: "About"
+title: "Research"
 ---
 
-### Bio
-I am a PhD student at the University of Minnesota - Twin Cities studying Psychological Foundations in Education with a research focus on Statistics and Data Science Education through the Educational Psychology department. I earned my Master of Arts degree in Educational Psychology (Quantitative Methods in Education with an emphasis on Statistics Education) also from the University of Minnesota - Twin Cities. I earned my Bachelor of Science degree in Statistics with a Gerontology minor at California Polytechnic State University San Luis Obispo.
+### University of Minnesota, *Minneapolis, MN*
+### Research Assistant: Evaluation Team 
+#### DSC WAV:  Code Review    
+  - Create educational resources for data science students learning how to review code (code review checklist, style guide considerations, etc.)
+  - Implement survey to assess usability and helpfulness of created resources
+  - Analyze and report findings from retrospective survey
 
-I am a passionate statistics educator and have experience teaching introductory courses and workshops in regression, simulation, hypothesis and significance testing, and data visualization. I have taught students to use a number of softwares, such as R, JMP, and TinkerPlots. 
-
-### Education
-Ph.D. Educational Psychology with a focus on Statistics Education    
-*September 2023 - present*   
-Psychological Foundations in Education
-University of Minnesota, Twin Cities
-
-M.A. Educational Psychology with a focus on Statistics Education   
-*September 2021 - October 2023*   
-Quantitative Methods in Education
-University of Minnesota, Twin Cities
-
-B.S. Statistics  
-*September 2016 - June 2020*    
-Minor in Gerontology
-California Polytechnic State University, San Luis Obispo
+### Graduate Assistant: Faculty Coordinator
+#### College in the Schools: Statistics Cohort
+  - Help plan and implement day-long professional development training sessions three times each year
+  - Professional development topics include: data wrangling pseudo code, item writing, inter-rater reliability, and item analysis
+  - Observe instructors to provide feedback on classroom engagement strategies two to three times each semester
