--- a/teach.qmd
+++ b/teach.qmd
@@ -2,6 +2,8 @@
 title: "Teaching"
 ---
 
+[Rate My Professor](https://www.ratemyprofessors.com/professor/2742423)
+
 ### University of Minnesota, *Minneapolis, MN*
 #### Instructor    
   - EPSY 3264: Basic and Applied Statistics
