--- a/index.qmd
+++ b/index.qmd
@@ -29,17 +29,17 @@ I am a PhD student and passionate statistics educator. I have experience teachin
 I am an avid Pinterest user, I love karaoke, and I stop to pet every dog I pass (after asking their owner, of course).
 
 ### Education
-Ph.D. Educational Psychology with a focus on Statistics Education    
+**Ph.D. Educational Psychology with a focus on Statistics Education**    
 *September 2023 - present*   
 Psychological Foundations in Education
 University of Minnesota, Twin Cities
 
-M.A. Educational Psychology with a focus on Statistics Education   
+**M.A. Educational Psychology with a focus on Statistics Education**   
 *September 2021 - October 2023*   
 Quantitative Methods in Education
 University of Minnesota, Twin Cities
 
-B.S. Statistics  
+**B.S. Statistics**  
 *September 2016 - June 2020*    
 Minor in Gerontology
 California Polytechnic State University, San Luis Obispo
