--- a/teach.qmd
+++ b/teach.qmd
@@ -7,7 +7,7 @@ format:
 
 ## [Rate My Professor](https://www.ratemyprofessors.com/professor/2742423)
 
-### University of Minnesota, *Minneapolis, MN*
+### **University of Minnesota, *Minneapolis, MN* **
 
 #### Instructor
 
@@ -27,7 +27,8 @@ format:
     -   Summer 2022
     -   Spring 2023
 
-### Cal Poly Academic Skills Center, *San Luis Obispo, CA*
+
+### **Cal Poly Academic Skills Center, *San Luis Obispo, CA* **
 
 #### Senior Leader
 
