--- a/research.qmd
+++ b/research.qmd
@@ -5,19 +5,19 @@ format:
     anchor-sections: false
 ---
 
-## **University of Minnesota, *Minneapolis, MN* **
-### Lab Member: [LASER](https://laser-umn.github.io/)
-#### Lab Advancing Statistics Education Research 
+### University of Minnesota, *Minneapolis, MN* 
+#### Lab Member: [LASER](https://laser-umn.github.io/)
+##### Lab Advancing Statistics Education Research 
   - Engage in collaborative research efforts with statistics education researchers at the University of Minnesota
 
-### Research Assistant: Evaluation Team 
-#### DSC WAV:  Code Review    
+#### Research Assistant: Evaluation Team 
+##### DSC WAV:  Code Review    
   - Create educational resources for data science students learning how to review code (code review checklist, style guide considerations, etc.)
   - Implement survey to assess usability and helpfulness of created resources
   - Analyze and report findings from retrospective survey
 
-### Graduate Assistant: Faculty Coordinator
-#### College in the Schools: Statistics Cohort
+#### Graduate Assistant: Faculty Coordinator
+##### College in the Schools: Statistics Cohort
   - Help plan and implement day-long professional development training sessions three times each year
   - Professional development topics include: data wrangling pseudo code, item writing, inter-rater reliability, and item analysis
   - Observe instructors to provide feedback on classroom engagement strategies two to three times each semester
