--- a/index.qmd
+++ b/index.qmd
@@ -28,7 +28,7 @@ I am a PhD student and passionate statistics educator. I have experience teachin
 
 I am an avid Pinterest user, I love karaoke, and I stop to pet every dog I pass (after asking their owner, of course).
 
-#### **Education**
+### Education
 **Ph.D. Educational Psychology with a focus on Statistics Education**    
 *September 2023 - present*   
 Psychological Foundations in Education
