--- a/research.qmd
+++ b/research.qmd
@@ -8,16 +8,23 @@ format:
 ### University of Minnesota, *Minneapolis, MN* 
 #### Lab Member: [LASER](https://laser-umn.github.io/)
 ##### Lab Advancing Statistics Education Research 
+##### September 2021 - present
   - Engage in collaborative research efforts with statistics education researchers at the University of Minnesota
-
-#### Research Assistant: Evaluation Team 
-##### DSC WAV:  Code Review    
-  - Create educational resources for data science students learning how to review code (code review checklist, style guide considerations, etc.)
-  - Implement survey to assess usability and helpfulness of created resources
-  - Analyze and report findings from retrospective survey
+  - Curriculum development: algorithmic modeling
+      - Building on past research teaching CART algorithms, LASER is currently designing activities focusing on the kNN algorithm
+  - Curriculum development: data visualization
+      - Building on existing course activities for EPSY 1261: Understanding Data Stories through Visualization & Computing and update with new material
 
 #### Graduate Assistant: Faculty Coordinator
 ##### College in the Schools: Statistics Cohort
+##### September 2022 - present
   - Help plan and implement day-long professional development training sessions three times each year
   - Professional development topics include: data wrangling pseudo code, item writing, inter-rater reliability, and item analysis
   - Observe instructors to provide feedback on classroom engagement strategies two to three times each semester
+
+#### Research Assistant: Evaluation Team 
+##### DSC WAV:  Code Review 
+##### January 2022 - October 2023
+  - Create educational resources for data science students learning how to review code (code review checklist, style guide considerations, etc.)
+  - Implement survey to assess usability and helpfulness of created resources
+  - Analyze and report findings from retrospective survey
