--- a/projects/attitudes.qmd
+++ b/projects/attitudes.qmd
@@ -4,3 +4,5 @@ editor: visual
 ---
 
 ~ Page Under Construction ~
+
+[Baby's first poster linked here](https://raw.githubusercontent.com/rlisinker/website-quarto/main/files/attitudes/Lisinker_Attitudes_LSGSC_Poster.pdf)
