--- a/index.qmd
+++ b/index.qmd
@@ -16,11 +16,11 @@ about:
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/regina-lisinker
+    # - icon: file-earmark-text-fill
+    #   text: CV
+    #   href: https://raw.githubusercontent.com/rlisinker/website-quarto/main/files/RLisinker-CV-s2024.pdf
     - icon: file-earmark-text-fill
       text: CV
-      href: https://raw.githubusercontent.com/rlisinker/website-quarto/main/files/RLisinker-CV-s2024.pdf
-    - icon: file-earmark-text-fill
-      text: CV2
       href: https://rlisinker.com/projects/cv.html
     - icon: envelope-plus-fill
       text: Email
