--- a/projects/cv.qmd
+++ b/projects/cv.qmd
@@ -2,4 +2,9 @@
 title: "CV"
 ---
 
-<p align="center"><iframe src="https://docs.google.com/document/d/e/2PACX-1vRbhzs-FqTTIHfr-qgM0pUgRXaHMyLwXTQJLeS0TiWzlONc-4JCsGW-J7znGoGvZVmboG7hAENspvTS/pub?embedded=true" frameborder="0" width="100%" height="4000" scrolling="yes"></iframe> 
+<object data="/files/cv/RLisinker-S25-CV.pdf" type="application/pdf" width="100%" height="100%">
+   <iframe src="/files/cv/RLisinker-S25-CV.pdf" width="100%" height="100%" style="border: none;">
+     This browser does not support PDFs. Please download the PDF to view it: 
+     <a href="/files/cv/RLisinker-S25-CV.pdf">Download PDF</a>
+   </iframe>
+</object>
