--- a/teach.qmd
+++ b/teach.qmd
@@ -14,6 +14,7 @@ format:
 -   EPSY 3264: Basic and Applied Statistics
     -   Spring 2022
     -   Fall 2022
+    -   Spring 2025
 -   EPSY 1261: Understanding Data Stories through Visualization & Computing
     -   Fall 2023
     -   Fall 2024
