--- a/teach.qmd
+++ b/teach.qmd
@@ -4,8 +4,13 @@ format:
   html:
     anchor-sections: false
 ---
+### Awards and Honors
 
-### [Rate My Professor](https://www.ratemyprofessors.com/professor/2742423)
+I was honored with the Excellence in Teaching graduate student award from the Psychological Foundations in Education program for the 2024-25 academic year
+
+I have received two Thank a Teacher certificates through the Center for Educational Innovation (Spring '22 and Summer '23)  
+
+Additionally, I am incredibly grateful to my students who submit their thoughts on my teaching on [Rate My Professor](https://www.ratemyprofessors.com/professor/2742423)
 
 ### **University of Minnesota, *Minneapolis, MN* **
 
